--- a/allv2.css
+++ b/allv2.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    
 }
 ol, ul {
 	list-style: none;
@@ -60,9 +61,29 @@ a{
     text-decoration: none;
 }
 
+.wrap{
+    max-width: 1366px;
+    margin: 0 auto;
+    background-image: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/bg_home.svg"), url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/ball01.svg"), url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/ball02.svg"), url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/ball03.svg");
+    background-repeat: no-repeat;
+    background-position: top right, -222px 590px, 1150px 1597px,60px 2470px ;
+    background-size: auto,auto,310px 310px,150px;
+}
 .container{
     max-width: 1085px;
     margin: 0 auto;
+}
+@media (max-width:768px){
+    .wrap{
+        background-size: auto, 150px 150px,135px;
+        background-position: 14px 517px, -94px 904px, 271px 3148px, -76px 4866px;
+    }
+    .container{
+        padding: 0px 20px;
+    }
+}
+.footer .container{
+    background-image: none;
 }
 
 h2{
@@ -216,6 +237,7 @@ p{
     text-align: center;
     box-shadow: 0px 2px 10px #00000014;
     border-radius: 12px;
+    background-color: white;
 }
 
 .senario p{
@@ -325,6 +347,7 @@ p{
     border-radius: 12px;
     padding: 48px 32px 24px 32px;
     position: relative;
+    background-color: white;
 }
 .feedbackCard .user{
     width: 80px;
